--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
 [NEAT]
 fitness_criterion     = max
-fitness_threshold     = 10000
+fitness_threshold     = 2000
 pop_size              = 50
 reset_on_extinction   = 1
 
 [DefaultGenome]
 # node activation options
-activation_default      = sigmoid
+activation_default      = relu
 activation_mutate_rate  = 0.0
-activation_options      = sigmoid
+activation_options      = relu
 
 # node aggregation options
 aggregation_default     = sum
@@ -43,7 +43,7 @@ node_add_prob           = 0.2
 node_delete_prob        = 0.2
 
 # network parameters
-num_hidden              = 4
+num_hidden              = 6
 num_inputs              = 14
 num_outputs             = 2
 
